--- a/domains/product-catalog.yaml
+++ b/domains/product-catalog.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Domain
 metadata:
-  name: product-catalog
+  name: product-catalog-domain
   description: Everything related to Product catalog
 spec:
   owner: subscriptions-group
